# herbarium-repository-databot

./: Dockerfile  README.md  pyproject.toml  refactoring_proposal.md  test.py
.github/: dependabot.yml
.github/workflows/: publish.yml
src/: config.yaml  db.py  main.py  test.py
src/bots/: ConnectionTestDatabot.py  NoReferenceImageMetricsDatabot.py  abstract.py  abstract_url.py  test_connection.py
src/bots/base/: abstract.py  abstract_url.py
src/bots/implementations/: cetaf_metadata_databot.py  database_connection_test_databot.py  hespi_bbox_detector.py  jacq_metadata_databot.py  no_reference_image_metrics_databot.py  vouvis_metadata_databot.py
src/config/: config.py
src/core/: BaseDatabase.py  Database.py  JobStore.py  UrlDatabase.py  WorkerPool.py
src/core/application/: BotScheduler.py  JobStore.py  WorkerPool.py
src/core/domain/: DatabotRole.py  ResultStatus.py
src/core/infrastructure/database/: base_database.py  database.py  url_database.py
src/core/infrastructure/storage/: s3_storage.py
src/services/: cetaf_sid_service.py  chart_service.py  hespiv1_sheet_service.py
src/utils/: types.py
src/web/: app.py
